# openGL_sandbox

./: .gitignore  CMakeLists.txt
assets/shaders/: default.frag  default.vert  lightSource.frag  lightSource.vert
headers/: EBO.h  VAO.h  VBO.h  camera.h  shaderClass.h  texture.h  uniform.h
src/: EBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  glad.c  glad.h  main.cpp  shaderClass.cpp  stb.cpp  texture.cpp  uniformClass.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
